--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Dice App</string>
     <string name="fullname">FullName</string>
     <string name="age">Age</string>
     <string name="email">Email</string>
