--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -3,4 +3,7 @@
     <string name="fullname">FullName</string>
     <string name="age">Age</string>
     <string name="email">Email</string>
+    <string name="gender">Gender</string>
+    <string name="femme">Femme</string>
+    <string name="homme">Homme</string>
 </resources>
